[package]
name = "si-scale"
version = "0.2.1"
edition = "2018"
description = "Format values using the appropriate SI scale: seconds(1.3e-5) -> 13 µs"
readme = "README.md"

license = "MIT OR Apache-2.0"
authors = ["graelo <graelo@grael.cc>"]
repository = "https://github.com/graelo/si-scale"
homepage = "https://github.com/graelo/si-scale"
documentation = "https://docs.rs/si-scale"

keywords = ["units", "pretty", "human", "number", "si-units"]
categories = ["value-formatting", "science"]
exclude = ["/.github"]

[dependencies]
