[package]
name = "si-scale"
version = "0.2.3"
edition = "2018"
description = "Format values using the appropriate SI scale: seconds(1.3e-5) -> 13 µs"
readme = "README.md"

license = "MIT OR Apache-2.0"
authors = ["graelo <graelo@graelo.cc>"]
repository = "https://github.com/graelo/si-scale"
homepage = "https://github.com/graelo/si-scale"
documentation = "https://docs.rs/si-scale"

keywords = ["units", "pretty", "human", "number", "si-units"]
categories = ["value-formatting", "science"]
exclude = ["/.github"]

[features]
default = []
## Enable `IntoF64` for `u64`, `i64`, `usize`, and `isize`.
## These conversions may lose precision for values > 2^53.
lossy-conversions = []

[dependencies]
