[package]
name = "si-scale"
version = "0.3.0"
edition = "2018"
description = "Format values using the appropriate SI scale: seconds(1.3e-5) -> 13 µs"
readme = "README.md"

documentation = "https://docs.rs/si-scale"
homepage = "https://github.com/graelo/si-scale"
repository = "https://github.com/graelo/si-scale"
license = "MIT OR Apache-2.0"

keywords = ["human", "number", "pretty", "si-units", "units"]
categories = ["science", "value-formatting"]
exclude = ["/.github"]

[dependencies]

[features]
default = []
## Enable `IntoF64` for `u64`, `i64`, `usize`, and `isize`.
## These conversions may lose precision for values > 2^53.
lossy-conversions = []
